@@ -138,7 +138,7 @@ ACE_SSL_SOCK_Acceptor::ssl_accept (ACE_SSL_SOCK_Stream &new_stream,
         {
           // Must have at least one handle to wait for at this point.
           ACE_ASSERT (rd_handle.num_set() == 1 || wr_handle.num_set () == 1);
-          status = ACE::select (ACE_Utils::truncate_cast<int> (handle) + 1,
+          status = ACE::select (int (handle) + 1,
                                 &rd_handle,
                                 &wr_handle,
                                 0,
