@@ -17,7 +17,7 @@ ACE_SSL_SOCK_Stream::set_handle (ACE_HANDLE fd)
     }
   else
     {
-      (void) ::SSL_set_fd (this->ssl_, ACE_Utils::truncate_cast<int> (fd));
+      (void) ::SSL_set_fd (this->ssl_, reinterpret_cast<int> (fd));
       this->ACE_SSL_SOCK::set_handle (fd);
       this->stream_.set_handle (fd);
     }
